--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="#">
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./main.css" />
     <title>IT 310 Lectures</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <h1>My Learning</h1>
+      <h1>My Learning</h1>
     </div>
 
     <fieldset>
-        <legend>Lectures</legend>
-       <p>Welcome to the new "My Learning" here at Bulacan State University 
-           - Sarmiento Campus. This will be your hub to all lectures in IT 
-           and your learning progress. </p> 
-           <p>We hope you will continue to learn with us.</p>
+      <legend>Lectures</legend>
+      <p>
+        Welcome to the new "My Learning" here at Bulacan State University -
+        Sarmiento Campus. This will be your hub to all lectures in IT and your
+        learning progress.
+      </p>
+      <p>We hope you will continue to learn with us.</p>
 
-           <a href="./lectures.html">
-               <button class="btn-learnXml" type="button"> Continue "Learn XML"
-        </button></a>
+      <a href="./lectures.html">
+        <button class="btn-learnXml" type="button">
+          Continue "Learn XML"
+        </button></a
+      >
     </fieldset>
-</body>
+  </body>
 </html>
